--- a/src/common/header.html
+++ b/src/common/header.html
@@ -1,5 +1,8 @@
 <header class="header">
     <div class="container">
+        <a href="#" class="header-burger">
+            <img src="img/burger.svg" alt="">
+        </a>
         <a href="#" class="header-logo">
             <img src="img/logo.svg" alt="">
         </a>
@@ -12,7 +15,28 @@
                 <a href="#">Для женщин</a>
             </li>
         </ul>
-
-        <a href="#" class="header-basket">КОРЗИНА (<span>0</span>)</a>
+        <div class="header-basket-wrapper">
+            <a href="#" class="header-basket"><span>КОРЗИНА </span>(<span>0</span>)</a>
+        </div>
     </div>
 </header>
+
+<div class="header-menu">
+
+    <a href="#" class="header-logo">
+        <img src="img/logo.svg" alt="">
+    </a>
+
+    <svg class="card-modal-close menu-close" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M22.2093 20.0008L39.5419 2.66817C40.1521 2.05794 40.1521 1.06856 39.5419 0.458407C38.9316 -0.151748 37.9423 -0.151826 37.3321 0.458407L19.9995 17.791L2.66695 0.458407C2.05672 -0.151826 1.06734 -0.151826 0.457187 0.458407C-0.152968 1.06864 -0.153047 2.05801 0.457187 2.66817L17.7897 20.0007L0.457187 37.3333C-0.153047 37.9436 -0.153047 38.9329 0.457187 39.5431C0.762264 39.8482 1.16219 40.0007 1.56211 40.0007C1.96203 40.0007 2.36187 39.8482 2.66703 39.5431L19.9995 22.2106L37.332 39.5431C37.6371 39.8482 38.037 40.0007 38.437 40.0007C38.8369 40.0007 39.2367 39.8482 39.5419 39.5431C40.1521 38.9329 40.1521 37.9435 39.5419 37.3333L22.2093 20.0008Z" fill="#666666"/>
+    </svg> 
+
+    <ul class="header-tabs">
+        <li>
+            <a href="#">Для мужчин</a>
+        </li>
+        <li>
+            <a href="#">Для женщин</a>
+        </li>
+    </ul>
+</div>
