--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,65 @@
       //= common/header
 
       <main class="main">
-        <div class="screen">
+        <div class="card-wrapper">
+          <div class="card">
+            <div class="card-slider">
+              <div class="card-slider-item"><img src="images/card-item1.png" alt=""></div>
+              <div class="card-slider-item"><img src="images/card-item1.png" alt=""></div>
+              <div class="card-slider-item"><img src="images/card-item1.png" alt=""></div>
+              <div class="card-slider-item"><img src="images/card-item1.png" alt=""></div>
+            </div>
+            <div class="card-content">
+              <h3>Tom craft</h3>
+              <span><b>₽</b> 12500</span>
+              <p>Tom craft SS20 TECUATL PRISONER DRAWSTRING PANTS IN BLACK NEW WOOL FEATURE A SLIM FIT AND A FULL-LENGTH, A DRAWSTRING WAIST AND RIBBED ANKLE CUFFS.</p>
+              <p>THIS IS A CORE MATERIAL FOR THE RICK OWENS COLLECTION.</p>
+              <ul>
+                <li>* COLOR: BLACK.</li>
+                <li>* MATERIAL: 97% NEW WOOL + 2% NYLON + 1% SPANDEX.</li>
+                <li>* POCKET TONGUES: 100% COTTON.</li>
+                <li>* MODEL IS WEARING SIZE: M.</li>
+                <li>* MODEL IS 188 CM TALL.</li>
+              </ul>
+              <a href="#" class="link">Закрыть описание</a>
 
+              <div class="card-size">
+                <h4>SELECT SIZE</h4>
+                <ul>
+                  <li><a href="#" class="is-active">L</a></li>
+                  <li><a href="#">XL</a></li>
+                </ul>
+                <a href="#" class="link">показать Таблицу размеров</a>
+              </div>
+
+              <a href="#" class="button">ДОБАВИТЬ В КОРЗИНУ</a>
+            </div>
+          </div>
         </div>
       </main>
 
       //= common/footer
+    </div>
+
+    <div class="card-modal">
+      <div class="card-modal-content">
+        <div class="card-modal-nav">
+          <div class="is-active"><img src="images/card-item1.png" alt=""></div>
+          <div><img src="images/card-item1.png" alt=""></div>
+          <div><img src="images/card-item1.png" alt=""></div>
+          <div><img src="images/card-item1.png" alt=""></div>
+        </div>
+        <div class="card-modal-slider">
+          <div><img src="images/card-item1.png" alt=""></div>
+          <div><img src="images/card-item1.png" alt=""></div>
+          <div><img src="images/card-item1.png" alt=""></div>
+          <div><img src="images/card-item1.png" alt=""></div>
+        </div>
+
+        <svg class="card-modal-close card-close" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M22.2093 20.0008L39.5419 2.66817C40.1521 2.05794 40.1521 1.06856 39.5419 0.458407C38.9316 -0.151748 37.9423 -0.151826 37.3321 0.458407L19.9995 17.791L2.66695 0.458407C2.05672 -0.151826 1.06734 -0.151826 0.457187 0.458407C-0.152968 1.06864 -0.153047 2.05801 0.457187 2.66817L17.7897 20.0007L0.457187 37.3333C-0.153047 37.9436 -0.153047 38.9329 0.457187 39.5431C0.762264 39.8482 1.16219 40.0007 1.56211 40.0007C1.96203 40.0007 2.36187 39.8482 2.66703 39.5431L19.9995 22.2106L37.332 39.5431C37.6371 39.8482 38.037 40.0007 38.437 40.0007C38.8369 40.0007 39.2367 39.8482 39.5419 39.5431C40.1521 38.9329 40.1521 37.9435 39.5419 37.3333L22.2093 20.0008Z" fill="#666666"/>
+        </svg>          
+      </div>
     </div>
 
     <script src="js/main.js"></script>
