--- a/src/common/header.html
+++ b/src/common/header.html
@@ -23,20 +23,65 @@
 
 <div class="header-menu">
 
-    <a href="#" class="header-logo">
-        <img src="img/logo.svg" alt="">
-    </a>
-
     <svg class="card-modal-close menu-close" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M22.2093 20.0008L39.5419 2.66817C40.1521 2.05794 40.1521 1.06856 39.5419 0.458407C38.9316 -0.151748 37.9423 -0.151826 37.3321 0.458407L19.9995 17.791L2.66695 0.458407C2.05672 -0.151826 1.06734 -0.151826 0.457187 0.458407C-0.152968 1.06864 -0.153047 2.05801 0.457187 2.66817L17.7897 20.0007L0.457187 37.3333C-0.153047 37.9436 -0.153047 38.9329 0.457187 39.5431C0.762264 39.8482 1.16219 40.0007 1.56211 40.0007C1.96203 40.0007 2.36187 39.8482 2.66703 39.5431L19.9995 22.2106L37.332 39.5431C37.6371 39.8482 38.037 40.0007 38.437 40.0007C38.8369 40.0007 39.2367 39.8482 39.5419 39.5431C40.1521 38.9329 40.1521 37.9435 39.5419 37.3333L22.2093 20.0008Z" fill="#666666"/>
     </svg> 
 
     <ul class="header-tabs">
         <li>
-            <a href="#">Для мужчин</a>
+            <a href="#" class="is-active">Для мужчин</a>
         </li>
         <li>
             <a href="#">Для женщин</a>
         </li>
     </ul>
+</div>
+
+<div class="emerge_basket-wrapper">
+    <div class="emerge_basket-overlay"></div>
+    <div class="emerge_basket">
+        <div class="emerge_basket-heading">
+            <svg class="emerge_basket-close" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.88368 8.001L15.8167 1.06795C16.0608 0.823858 16.0608 0.428109 15.8167 0.184047C15.5726 -0.0600155 15.1769 -0.0600468 14.9328 0.184047L7.99975 7.1171L1.06673 0.184047C0.822637 -0.0600468 0.426888 -0.0600468 0.182826 0.184047C-0.0612362 0.42814 -0.0612675 0.823889 0.182826 1.06795L7.11584 8.00097L0.182826 14.934C-0.0612675 15.1781 -0.0612675 15.5739 0.182826 15.8179C0.304857 15.94 0.464825 16.001 0.624794 16.001C0.784762 16.001 0.944699 15.94 1.06676 15.8179L7.99975 8.8849L14.9328 15.8179C15.0548 15.94 15.2148 16.001 15.3747 16.001C15.5347 16.001 15.6946 15.94 15.8167 15.8179C16.0608 15.5738 16.0608 15.1781 15.8167 14.934L8.88368 8.001Z" fill="white"/>
+            </svg>    
+            
+            <span>КОРЗИНА (0)</span>
+        </div>
+        <div class="emerge_basket-content">
+            <h4 class="emerge_basket-content-title">ваша корзина пуста</h4>
+            <div class="emerge_basket-item">
+                <img src="images/catalog-item.png" alt="">
+                <div class="emerge_basket-texts">
+                    <h2>tom craft</h2>
+                    <p>пиджак</p>
+                    <span><b>₽</b> 12500</span>
+                </div>
+                <div class="emerge_basket-item_close">
+                    <svg width="8" height="8" viewBox="0 0 8 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M4.44172 4.00099L7.90823 0.534464C8.03027 0.412417 8.03027 0.214543 7.90823 0.0925116C7.78618 -0.0295195 7.58831 -0.0295351 7.46628 0.0925116L3.99975 3.55904L0.533243 0.0925116C0.411197 -0.0295351 0.213322 -0.0295351 0.0912908 0.0925116C-0.0307402 0.214558 -0.0307558 0.412433 0.0912908 0.534464L3.5578 4.00097L0.0912908 7.4675C-0.0307558 7.58955 -0.0307558 7.78742 0.0912908 7.90945C0.152306 7.97047 0.232291 8.00097 0.312275 8.00097C0.392259 8.00097 0.472228 7.97047 0.533259 7.90945L3.99975 4.44294L7.46626 7.90945C7.52728 7.97047 7.60726 8.00097 7.68724 8.00097C7.76723 8.00097 7.8472 7.97047 7.90823 7.90945C8.03027 7.7874 8.03027 7.58953 7.90823 7.4675L4.44172 4.00099Z" fill="white"/>
+                    </svg>                        
+                </div>
+            </div>
+
+            <div class="emerge_basket-item">
+                <img src="images/catalog-item.png" alt="">
+                <div class="emerge_basket-texts">
+                    <h2>tom craft</h2>
+                    <p>пиджак</p>
+                    <span><b>₽</b> 12500</span>
+                </div>
+                <div class="emerge_basket-item_close">
+                    <svg width="8" height="8" viewBox="0 0 8 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M4.44172 4.00099L7.90823 0.534464C8.03027 0.412417 8.03027 0.214543 7.90823 0.0925116C7.78618 -0.0295195 7.58831 -0.0295351 7.46628 0.0925116L3.99975 3.55904L0.533243 0.0925116C0.411197 -0.0295351 0.213322 -0.0295351 0.0912908 0.0925116C-0.0307402 0.214558 -0.0307558 0.412433 0.0912908 0.534464L3.5578 4.00097L0.0912908 7.4675C-0.0307558 7.58955 -0.0307558 7.78742 0.0912908 7.90945C0.152306 7.97047 0.232291 8.00097 0.312275 8.00097C0.392259 8.00097 0.472228 7.97047 0.533259 7.90945L3.99975 4.44294L7.46626 7.90945C7.52728 7.97047 7.60726 8.00097 7.68724 8.00097C7.76723 8.00097 7.8472 7.97047 7.90823 7.90945C8.03027 7.7874 8.03027 7.58953 7.90823 7.4675L4.44172 4.00099Z" fill="white"/>
+                    </svg>                        
+                </div>
+            </div>
+
+            <div class="emerge_basket-pays">
+                <h2>ИТОГО <b>₽</b>0</h2>
+
+                <a href="#" class="button">перейти в корзину</a>
+            </div>
+        </div>
+    </div>
 </div>
