--- a/src/catalog.html
+++ b/src/catalog.html
@@ -17,6 +17,23 @@
         <div class="catalog-wrapper">
             <ul class="catalog-filters">
 
+              <li class="catalog-filters-mobile_burger">
+                <svg class="card-modal-close filters-close" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M22.2093 20.0008L39.5419 2.66817C40.1521 2.05794 40.1521 1.06856 39.5419 0.458407C38.9316 -0.151748 37.9423 -0.151826 37.3321 0.458407L19.9995 17.791L2.66695 0.458407C2.05672 -0.151826 1.06734 -0.151826 0.457187 0.458407C-0.152968 1.06864 -0.153047 2.05801 0.457187 2.66817L17.7897 20.0007L0.457187 37.3333C-0.153047 37.9436 -0.153047 38.9329 0.457187 39.5431C0.762264 39.8482 1.16219 40.0007 1.56211 40.0007C1.96203 40.0007 2.36187 39.8482 2.66703 39.5431L19.9995 22.2106L37.332 39.5431C37.6371 39.8482 38.037 40.0007 38.437 40.0007C38.8369 40.0007 39.2367 39.8482 39.5419 39.5431C40.1521 38.9329 40.1521 37.9435 39.5419 37.3333L22.2093 20.0008Z" fill="#666666"></path>
+                </svg>
+              </li>
+
+              <li class="catalog-filters-mobile_heading">
+                <ul class="header-tabs">
+                  <li>
+                    <a href="#" class="is-active">Для мужчин</a>
+                  </li>
+                  <li>
+                    <a href="#">Для женщин</a>
+                  </li>
+                </ul>
+              </li>
+
               <li class="catalog-filters-heading">
                 <a href="#" class="catalog-filters-more">Фильтр</a> 
                 <a href="#" class="catalog-filters-close">Очистить</a>
@@ -72,9 +89,14 @@
               <li class="catalog-filters-item">
                 <a href="#" class="catalog-filters-title">Весна/лето <img src="img/close.svg" alt="" class="catalog-filters-remove"></a> 
               </li>
+
+              <li class="catalog-filters-mobile_clear_all">
+                <a href="#" class="catalog-filters-mobile_clear_all-link">Очистить все</a> 
+              </li>
             </ul>
 
             <div class="catalog">
+              
               <a href="#" class="catalog-card">
                 <div class="catalog-card-img-wrapper">
                   <img src="images/catalog-item.png" alt="" class="catalog-card-img">
@@ -89,7 +111,7 @@
                 <ul>
                   <li>TOM CRAFT</li>
                   <li>пиджак</li>
-                  <li>₽ 12500</li>
+                  <li><b>₽</b> 12500</li>
                 </ul>
               </a>
 
@@ -107,7 +129,7 @@
                 <ul>
                   <li>TOM CRAFT</li>
                   <li>пиджак</li>
-                  <li>₽ 12500</li>
+                  <li><b>₽</b> 12500</li>
                 </ul>
               </a>
 
@@ -126,7 +148,7 @@
                 <ul>
                   <li>TOM CRAFT</li>
                   <li>пиджак</li>
-                  <li>₽ 12500</li>
+                  <li><b>₽</b> 12500</li>
                 </ul>
               </a>
 
@@ -144,9 +166,34 @@
                 <ul>
                   <li>TOM CRAFT</li>
                   <li>пиджак</li>
-                  <li>₽ 12500</li>
+                  <li><b>₽</b> 12500</li>
                 </ul>
               </a>
+
+              <ul class="catalog-pag">
+                <li>
+                  <a href="#" class="disabled">
+                    <svg width="6" height="8" viewBox="0 0 6 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M6 0L6 8L-1.74846e-07 4L6 0Z" fill="#28293D"/>
+                    </svg>
+                  </a>
+                </li>
+                <li><a href="#" class="is-active">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3...</a></li>
+                <li><a href="#">15</a></li>
+                <li><a href="#">
+                  <svg width="6" height="8" viewBox="0 0 6 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M0 8.00006L-3.49691e-07 6.10352e-05L6 4.00006L0 8.00006Z" fill="#28293D"/>
+                  </svg>                    
+                </a></li>
+                <li><a href="#">ПОКАЗАТЬ ВСЕ</a></li>
+              </ul>
+
+              <div class="catalog-filters-heading catalog-filters-mobile-btn">
+                <a href="#" class="catalog-filters-more">Фильтр</a> 
+                <a href="#" class="catalog-filters-close">Очистить</a>
+              </div>
             </div>
         </div>
       </main>
