--- a/src/card.html
+++ b/src/card.html
@@ -16,7 +16,14 @@
       <main class="main">
         <div class="card-wrapper">
           <div class="card">
-            <div class="card-slider">
+            <div class="card-slider card-slider-main">
+              <div class="card-slider-item"><img src="images/card-item1.png" alt=""></div>
+              <div class="card-slider-item"><img src="images/card-item1.png" alt=""></div>
+              <div class="card-slider-item"><img src="images/card-item1.png" alt=""></div>
+              <div class="card-slider-item"><img src="images/card-item1.png" alt=""></div>
+            </div>
+
+            <div class="card-slider card-slider-sub">
               <div class="card-slider-item"><img src="images/card-item1.png" alt=""></div>
               <div class="card-slider-item"><img src="images/card-item1.png" alt=""></div>
               <div class="card-slider-item"><img src="images/card-item1.png" alt=""></div>
