--- a/src/card.html
+++ b/src/card.html
@@ -10,24 +10,26 @@
   </head>
 
   <body>
-    <div class="wrapper">
+    <div class="wrapper card-page">
       //= common/header
 
       <main class="main">
         <div class="card-wrapper">
           <div class="card">
             <div class="card-slider card-slider-main">
-              <div class="card-slider-item"><img src="images/card-item1.png" alt=""></div>
-              <div class="card-slider-item"><img src="images/card-item1.png" alt=""></div>
-              <div class="card-slider-item"><img src="images/card-item1.png" alt=""></div>
-              <div class="card-slider-item"><img src="images/card-item1.png" alt=""></div>
+              <div class="card-slider-item"><img src="images/item1.jpg" alt=""></div>
+              <div class="card-slider-item"><img src="images/item2.jpg" alt=""></div>
+              <div class="card-slider-item"><img src="images/item3.jpg" alt=""></div>
+              <div class="card-slider-item"><img src="images/item4.jpg" alt=""></div>
+              <div class="card-slider-item"><img src="images/item5.jpg" alt=""></div>
             </div>
 
             <div class="card-slider card-slider-sub">
-              <div class="card-slider-item"><img src="images/card-item1.png" alt=""></div>
-              <div class="card-slider-item"><img src="images/card-item1.png" alt=""></div>
-              <div class="card-slider-item"><img src="images/card-item1.png" alt=""></div>
-              <div class="card-slider-item"><img src="images/card-item1.png" alt=""></div>
+              <div class="card-slider-item"><img src="images/item1.jpg" alt=""></div>
+              <div class="card-slider-item"><img src="images/item2.jpg" alt=""></div>
+              <div class="card-slider-item"><img src="images/item3.jpg" alt=""></div>
+              <div class="card-slider-item"><img src="images/item4.jpg" alt=""></div>
+              <div class="card-slider-item"><img src="images/item5.jpg" alt=""></div>
             </div>
             <div class="card-content">
               <h3>Tom craft</h3>
@@ -77,16 +79,18 @@
     <div class="card-modal">
       <div class="card-modal-content">
         <div class="card-modal-nav">
-          <div class="is-active"><img src="images/card-item1.png" alt=""></div>
-          <div><img src="images/card-item1.png" alt=""></div>
-          <div><img src="images/card-item1.png" alt=""></div>
-          <div><img src="images/card-item1.png" alt=""></div>
+          <div class="is-active"><img src="images/item1.jpg" alt=""></div>
+          <div><img src="images/item2.jpg" alt=""></div>
+          <div><img src="images/item3.jpg" alt=""></div>
+          <div><img src="images/item4.jpg" alt=""></div>
+          <div><img src="images/item5.jpg" alt=""></div>
         </div>
         <div class="card-modal-slider">
-          <div><img src="images/card-item1.png" alt=""></div>
-          <div><img src="images/card-item1.png" alt=""></div>
-          <div><img src="images/card-item1.png" alt=""></div>
-          <div><img src="images/card-item1.png" alt=""></div>
+          <div><img src="images/item1.jpg" alt=""></div>
+          <div><img src="images/item2.jpg" alt=""></div>
+          <div><img src="images/item3.jpg" alt=""></div>
+          <div><img src="images/item4.jpg" alt=""></div>
+          <div><img src="images/item5.jpg" alt=""></div>
         </div>
 
         <svg class="card-modal-close card-close" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
