--- a/src/catalog.html
+++ b/src/catalog.html
@@ -99,7 +99,7 @@
               
               <a href="#" class="catalog-card">
                 <div class="catalog-card-img-wrapper">
-                  <img src="images/catalog-item.png" alt="" class="catalog-card-img">
+                  <img src="images/item1.jpg" alt="" class="catalog-card-img">
                   <div class="catalog-card-size">
                     <h3>SELECT SIZE</h3>
                     <ol>
@@ -117,7 +117,7 @@
 
               <a href="#" class="catalog-card">
                 <div class="catalog-card-img-wrapper">
-                  <img src="images/catalog-item.png" alt="" class="catalog-card-img">
+                  <img src="images/item2.jpg" alt="" class="catalog-card-img">
                   <div class="catalog-card-size">
                     <h3>SELECT SIZE</h3>
                     <ol>
@@ -136,7 +136,7 @@
 
               <a href="#" class="catalog-card">
                 <div class="catalog-card-img-wrapper">
-                  <img src="images/catalog-item.png" alt="" class="catalog-card-img">
+                  <img src="images/item3.jpg" alt="" class="catalog-card-img">
                   <div class="catalog-card-size">
                     <h3>SELECT SIZE</h3>
                     <ol>
@@ -154,7 +154,7 @@
 
               <a href="#" class="catalog-card">
                 <div class="catalog-card-img-wrapper">
-                  <img src="images/catalog-item.png" alt="" class="catalog-card-img">
+                  <img src="images/item4.jpg" alt="" class="catalog-card-img">
                   <div class="catalog-card-size">
                     <h3>SELECT SIZE</h3>
                     <ol>
